# cpp-battle-test

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Core/: BaseUnit.hpp  GameMap.hpp  GameWorld.hpp  IAgiliable.hpp  IAttackableClose.hpp  IAttackableFar.hpp  IGameWorld.hpp  IHealthable.hpp  IMarchable.hpp  IStrengthable.hpp  IUnit.hpp  Utils.hpp
src/Core/Common/: Utils.hpp
src/Core/Interfaces/: IAgiliable.hpp  IGameWorld.hpp  IHealthable.hpp  IMarchable.hpp  IStrengthable.hpp  IUnit.hpp
src/Features/: AttackCloseUnit.cpp  AttackCloseUnit.hpp  AttackFarUnit.cpp  AttackFarUnit.hpp  HealthUnit.hpp  HunterUnit.hpp  MarchUnit.cpp  MarchUnit.hpp  Strengthable.hpp  SwordsManUnit.hpp  SwordsmanUnit.hpp
src/Features/Behaviors/: AttackCloseBehavior.cpp  AttackCloseBehavior.hpp  AttackFarBehavior.cpp  AttackFarBehavior.hpp  HealthBehavior.hpp  MarchBehavior.cpp  MarchBehavior.hpp
src/Features/Units/: HunterUnit.hpp  SwordsmanUnit.hpp
tests/: AgiliableTests.cpp  CommandParserTests.cpp  IntegrationTests.cpp  MarchableTests.cpp  StrengthableTests.cpp  UnitsBaseTests.cpp  agiliable.cpp  attackableclose.cpp  attackablefar.cpp  commands.cpp  integration.cpp  moveable.cpp  strengthable.cpp  units.cpp
